show section added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,9 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
+.container{
+    width: 1472px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
