--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-navbar></app-navbar>
+<app-navbar></app-navbar> <br> <br> <br> <br><br>
+<app-main></app-main>  
+<app-afzaliklar></app-afzaliklar>
