--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,11 +1,11 @@
 nav{
     width: 1472px;
-    height: 64px;
+    padding-bottom: 10px;
     display: flex;
     padding-top: 20px;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
+    background-color: #ffffff2c;
     position: fixed;
     z-index: 999;
     backdrop-filter: blur(10px);
@@ -75,6 +75,12 @@ nav{
         transform: translate(-50%, -50%);
         visibility: hidden;
        }
+       .icon-hidden{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+       }
        }
     } 
     .nav-button{
@@ -92,7 +98,7 @@ nav{
     } .nav-btn{
         height: 22px;
         border: none;
-        background-color: #fff;
+        background-color: transparent;
         font-size: 20px;
         font-weight: 600;
         color: rgb(245, 158, 11);
